# hermes-market-engine

./: .env.example  README.md  agents.md  coinbase_websocket.py  docker-compose.yml  pyproject.toml
db/: 01-schema.sql  02-timescale-migration.sql  order_book_snapshot_schema.sql  raw_events_stream_schema.sql  schema.sql
docs/: DATABASE_SETUP.md  JIT_PERFORMANCE_ANALYSIS.md  current_architecture.md
scripts/: main.sh  run_analytics.py  run_collector.py
src/: cli.py  coinbase_websocket.py  config.py  data_models.py  logging_config.py
src/analytics/: engine.py  orderbook.py
src/api/: __init__.py  analytics.py  db.py  dependencies.py  health.py  history.py  main.py  orderbook.py  responses.py
src/dashboard/: __main__.py  api_client.py  app.py  cli.py  db_client.py  layout.py  registry.py  theme.py
src/dashboard/assets/: style.css
src/dashboard/callbacks/: charts.py  data_store.py  orderbook.py  ticker.py
src/dashboard/components/: charts.py  imbalance.py  orderbook.py  placeholder.py  ticker.py
src/data_collection/: batched_writer.py  coinbase_client.py  ingestor.py  publisher.py
tests/dashboard/: fastapi_stub.py  test_app.py
tests/data_collection/: test_coinbase_client.py
